# light

./: .gitignore  action.py  audio.py  broadcast.py  camera.py  carousel.py  command.py  config.json  configure.py  detection.py  device.py  display.py  gpio.py  hkws_sdk.py  imu.py  key.py  laser_radar.py  main.py  microphone.py  motion.py  mqtt.py  mqtt_report.py  orbbec_camera.py  pyproject.toml  report.py  ros_access.py  server.py  state.py  system_monitor.py  uart.py  util.py  yolov11.py  智能消防车系统文档.md  灯杆架构设计文档.md
images/: README.md
